feat(server): exchange api v4
