# server/lib/v4/api.yaml
@@ -209,6 +209,118 @@ paths:
                   - data
         default:
           $ref: '#/components/responses/GeneralError'
+  /exchange/changelly/estimate:
+    get:
+      x-eov-operation-id: changellyEstimate
+      x-eov-operation-handler: handlers
+      description: Estimate Changelly rate
+      parameters:
+        - $ref: '#/components/parameters/deviceId'
+        - $ref: '#/components/parameters/cryptoIdFrom'
+        - $ref: '#/components/parameters/cryptoIdTo'
+        - $ref: '#/components/parameters/amount'
+      security:
+        - deviceSignature: []
+      responses:
+        '200':
+          description: Changelly estimation
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties: false
+                properties:
+                  rate:
+                    $ref: '#/components/schemas/NumberString'
+                  result:
+                    $ref: '#/components/schemas/NumberString'
+                  amount:
+                    $ref: '#/components/schemas/NumberString'
+                  error:
+                    type: string
+        default:
+          $ref: '#/components/responses/GeneralError'
+  /exchange/changelly/transaction:
+    post:
+      x-eov-operation-id: changellyCreateTransaction
+      x-eov-operation-handler: handlers
+      description: Create Changelly transaction
+      parameters:
+        - $ref: '#/components/parameters/deviceId'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              additionalProperties: false
+              properties:
+                from:
+                  $ref: '#/components/schemas/CryptoId'
+                to:
+                  $ref: '#/components/schemas/CryptoId'
+                amount:
+                  $ref: '#/components/schemas/NumberString'
+                address:
+                  $ref: '#/components/schemas/AnyCryptoAddress'
+                refundAddress:
+                  $ref: '#/components/schemas/NullableCryptoAddress'
+              required:
+                - from
+                - to
+                - amount
+                - address
+      security:
+        - deviceSignature: []
+      responses:
+        '200':
+          description: Changelly transaction
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties: false
+                properties:
+                  id:
+                    $ref: '#/components/schemas/AnyString256'
+                  depositAmount:
+                    $ref: '#/components/schemas/NumberString'
+                  depositAddress:
+                    $ref: '#/components/schemas/AnyCryptoAddress'
+                  extraId:
+                    $ref: '#/components/schemas/NullableString256'
+                required:
+                  - id
+                  - depositAmount
+                  - depositAddress
+        default:
+          $ref: '#/components/responses/GeneralError'
+  /exchange/changelly/validate:
+    get:
+      x-eov-operation-id: changellyValidateAddress
+      x-eov-operation-handler: handlers
+      description: Validate crypto address
+      parameters:
+        - $ref: '#/components/parameters/deviceId'
+        - $ref: '#/components/parameters/cryptoId'
+        - $ref: '#/components/parameters/address'
+      security:
+        - deviceSignature: []
+      responses:
+        '200':
+          description: Changelly address validation
+          content:
+            application/json:
+              schema:
+                type: object
+                additionalProperties: false
+                properties:
+                  isValid:
+                    type: boolean
+                required:
+                  - isValid
+        default:
+          $ref: '#/components/responses/GeneralError'
   /fees:
     get:
       x-eov-operation-id: getFees
@@ -751,6 +863,11 @@ components:
       pattern: ^[A-Za-z0-9_-]*$
       maxLength: 2097152
       nullable: true
+    CryptoAmount:
+      type: number
+      format: float
+      minimum: 0
+      maximum: 9007199254740991
     CryptoId:
       type: string
       pattern: ^[a-z0-9-]+@[a-z0-9-]+$
@@ -912,6 +1029,20 @@ components:
           - username
           - avatar
           - address
+    NullableCryptoAddress:
+      type: string
+      pattern: ^.{0,256}$
+      maxLength: 256
+      nullable: true
+    NullableString256:
+      type: string
+      pattern: ^.{0,256}$
+      maxLength: 256
+      nullable: true
+    NumberString:
+      type: string
+      pattern: ^[0-9]+(\.[0-9]+)?$
+      maxLength: 128
     PublicKeyCredentialType:
       type: string
       pattern: ^public-key$
@@ -1076,6 +1207,13 @@ components:
       description: Crypto address
       schema:
         $ref: '#/components/schemas/AnyCryptoAddress'
+    amount:
+      in: query
+      name: amount
+      required: true
+      description: Amount of crypto
+      schema:
+        $ref: '#/components/schemas/CryptoAmount'
     arch:
       in: path
       name: arch
@@ -1098,6 +1236,22 @@ components:
       in: query
       name: crypto
       required: true
+      allowReserved: true
+      schema:
+        $ref: '#/components/schemas/CryptoId'
+    cryptoIdFrom:
+      in: query
+      name: from
+      required: true
+      description: Crypto ID
+      allowReserved: true
+      schema:
+        $ref: '#/components/schemas/CryptoId'
+    cryptoIdTo:
+      in: query
+      name: to
+      required: true
+      description: Crypto ID
       allowReserved: true
       schema:
         $ref: '#/components/schemas/CryptoId'
